--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name localhost;
+    server_name home.afblock.dartsia.app;
     root /usr/share/nginx/html;
     index index.html;
 
