--- a/.dockerignore
+++ b/.dockerignore
@@ -9,8 +9,8 @@ coverage
 npm-debug.log
 yarn-debug.log
 yarn-error.log
-public
-!public/index.html
-!public/favicon.ico
-!public/robots.txt
+# public
+# !public/index.html
+# !public/favicon.ico
+# !public/robots.txt
 # Keep public assets that are copied by Vite
